# colab-gsoc2020-Yijia_Wu

./: README.md
community_bonding_tasks/: suggested_tasks.md
docs/: _config.yml  aboutme.md  aboutproject.md  index.html  progress.md
docs/_posts/: 2020-05-17-community_bonding_week1_2.md  2020-05-24-community_bonding_week3.md  2020-05-31-community_bonding_week4.md  2020-06-11-week1_2.md  2020-06-18-week3.md  2020-06-25-week4.md  2020-07-02-draft_of_document_of_first_exercise.md  2020-07-04-week5.md  2020-07-12-week5_6.md  2020-07-19-week7.md  2020-07-26-week8.md  2020-08-02-draft_of_document_of_second_exercise.md  2020-08-02-draft_of_documentation_of_second_exercise.md  2020-08-02-week9.md  2020-08-09-week10.md  2020-08-25-week11_12.md  2020-08-28-draft_of_documentation_of_third_exercise.md  2020-08-31-conclusion.md
docs/_site/: 404.html  feed.xml  index.html  robots.txt  sitemap.xml
exercises/machine_vision/: MyAlgorithm.py
exercises/mobile_manipulation/: MyAlgorithm.py  navigation.yaml  pick_and_place.py  warehouse_old.world
exercises_description/: Exercises_GUI_description.md
gripper_KGG60-40/CAD_adapter_IRB120/: adapter_KGG60-40.dwg  adapter_KGG60-40.stl
gripper_KGG60-40/CAD_finger/: finger.dwg  finger.stl
tasks_and_exercises_description/: Exercises_GUI_description.md  First_Exercise.md  Second_Exercise.md  Third_Exercise.md  weekly_tasks.md
template/: generateGUI.sh  resources_rc.py  test.py
test_gui_src/rqt_kinematics/: CMakeLists.txt  kinematic.perspective  kinematics.perspective  package.xml  plugin.xml  setup.py  test.perspective
test_gui_src/rqt_kinematics/resources/: KinematicsPlugin.ui  mainwindow.ui  resources.qrc
test_gui_src/rqt_kinematics/src/rqt_kinematics/: joints_limit.yaml  joints_setup.yaml  kinematics_module.py
test_gui_src/rqt_kinematics/src/rqt_kinematics/interfaces/: MyAlgorithm.py  camera.py  model_manager.py  models_info.yaml  pick_and_place.py  robot_wrapper.py
(+111 files in other folders)
